--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <canvas id="canvas"></canvas>
         <div class="" id="text">
-            <a href="#"><img class="logo" src="img/udruga-zvonigrad.png"></a>
+            <a href="https://www.facebook.com/udruga.zvonigrad"><img class="logo" src="img/udruga-zvonigrad.png"></a>
         </div>
     </main>
   </body>
